syntax = "proto3";

package oceanstars.user.protobuf;

import "user-dto.proto";

option java_multiple_files = true;
option java_package = "oceanstars.ecommerce.user.api.rpc.v1.service";

service UserAppService {

  // 消息发送接口
  rpc createResourceType(CreateResourceTypeCommand) returns (CreateResourceTypeResult);
}

